--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
  		</dependency>
+ 		<dependency>
+      		<groupId>javax.json</groupId>
+      		<artifactId>javax.json-api</artifactId>
+      		<version>1.0</version>
+    	</dependency>
+    	<dependency>
+      		<groupId>org.glassfish</groupId>
+      		<artifactId>javax.json</artifactId>
+      		<version>1.0.4</version>
+    	</dependency>
 	</dependencies>
 
 	<properties>
