--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       		<artifactId>javax.json</artifactId>
       		<version>1.0.4</version>
     	</dependency>
+    	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.0.3.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
